# aihero

./: .gitignore  iniciar_junyper.bat  main.py  pyproject.toml
anaconda_projects/db/: project_filebrowser.db
notebooks/: Day1.ipynb  Day2.ipynb
notebooks/.ipynb_checkpoints/: testing-checkpoint.ipynb
src/mi_paquete/: mis_funciones.py
