[project]
name = "course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nbstripout>=0.9.1",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.1.0",
    "requests>=2.33.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
